# mikrotik

./: Cargo.toml  README.md
src/: client.rs  lib.rs
src/interface/: interface.rs  mod.rs  types.rs  wireguard.rs
src/ip/: address.rs  dhcp_client.rs  dhcp_server.rs  mod.rs  route.rs  types.rs
src/routing/: mod.rs  rule.rs  types.rs
src/serde_helpers/: mod.rs
src/system/: health.rs  mod.rs  types.rs
tests/: interfaces_test.rs  ip_test.rs  routing_test.rs  system_test.rs
