[package]
name = "mikrotik"
version = "0.0.4"
edition = "2021"
description = "REST API Wrapper for Mikrotik API"
license = "MIT"


[dev-dependencies]
tokio-test = "0.4.2"

[dependencies]
base64 = "0.13.0"
futures = "0.3.17"
reqwest = { version = "0.11.4", features = ["rustls-tls", "serde_json", "json"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_derive = "1.0.136"
thiserror = "1.0.30"
tokio = { version = "1.10.1", features = ["full"] }
url = "2.2.2"
