[package]
name = "mikrotik"
version = "0.0.13"
edition = "2021"
description = "REST API Wrapper for Mikrotik API"
license = "MIT"
repository = "https://github.com/ishanjain28/mikrotik"

[dev-dependencies]
tokio-test = "0.4.2"
tokio = { version = "1.17.0", features = ["macros"] }

[dependencies]
base64 = "0.13.0"
ipnetwork = "0.20.0"
reqwest = { version = "0.11.4", features = ["rustls-tls", "serde_json", "json"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.79"
thiserror = "1.0.30"
url = "2.2.2"
